--- a/turtle/agents/knowledge.json
+++ b/turtle/agents/knowledge.json
@@ -1,5 +1,5 @@
 {
-  "turtle1":{
+  "raphael":{
     "pose":{
         "salle1":{
           "position": {"x": 0.574, "y": 3.395},
@@ -19,11 +19,16 @@
         "principale":{
           "position": {"x": 0, "y": 0},
           "quaterion": {"r1":0, "r2": 0, "r3":0, "r4": 1}
+        },
+        "nearTheBox":{
+          "position": {"x": 0.5, "y": 0},
+          "quaterion": {"r1":0, "r2": 0, "r3":0.998, "r4": -0.066}
         }
-    }
+    },
+    "other": "samira"
   },
 
-  "turtle2":{
+  "samira":{
     "pose":{
         "salle1":{
           "position": {"x": 0.496, "y": 4.564},
@@ -41,9 +46,15 @@
         },
 
         "principale":{
-          "position": {"x": 0, "y": 0},
+          "position": {"x": 0.5, "y": 0},
+          "quaterion": {"r1":0, "r2": 0, "r3":0.998, "r4": -0.066}
+        },
+
+        "nearTheBox":{
+          "position": {"x": 0.5, "y": 0},
           "quaterion": {"r1":0, "r2": 0, "r3":0.998, "r4": -0.066}
         }
-    }
+    },
+    "other": "raphael"
   }
 }
