--- a/turtle/agents/turtleAgent/knowledge.json
+++ b/turtle/agents/turtleAgent/knowledge.json
@@ -1,5 +1,5 @@
 {
-  "turtle1":{
+  "raphael":{
     "pose":{
         "salle1":{
           "position": {"x": 0.574, "y": 3.395},
@@ -21,10 +21,10 @@
           "quaterion": {"r1":0, "r2": 0, "r3":0, "r4": 1}
         }
     },
-    "other": "Raphael"
+    "other": "samira"
   },
 
-  "turtle2":{
+  "samira":{
     "pose":{
         "salle1":{
           "position": {"x": 0.496, "y": 4.564},
@@ -42,10 +42,10 @@
         },
 
         "principale":{
-          "position": {"x": 0, "y": 0},
+          "position": {"x": 0.5, "y": 0},
           "quaterion": {"r1":0, "r2": 0, "r3":0.998, "r4": -0.066}
         }
     },
-    "other": "turtle2"
+    "other": "raphael"
   }
 }
